--- a/.github/workflows/dispatch.yaml
+++ b/.github/workflows/dispatch.yaml
@@ -1,18 +1,9 @@
-name: Dispatch
-run-name: Dispatched Repository Actions - ${{ inputs.job }} ⌛️
+name: Manual Dispatch
 on:
   workflow_dispatch:
-    inputs:
-      job:
-        description: Dispatch job to run
-        required: true
-        type: choice
-        options:
-          - build
-permissions:
-  contents: write
+
 jobs:
-  check-and-build:
-    if: inputs.job == 'build'
+  manual-build:
+    name: Manual Build
     uses: ./.github/workflows/build-project.yaml
     secrets: inherit
