--- a/.github/workflows/build-project.yaml
+++ b/.github/workflows/build-project.yaml
@@ -47,7 +47,7 @@ jobs:
         with:
           version: '6.6.3'
           arch: 'win64_msvc2019_64'
-          cache: 'true'
+          cache: 'false'
 
       - name: Configure CMake
         run: cmake --preset windows-x64
